package Protos;

message LearningRuleInfo {
    required bool weight_normalization_is_set = 1;
}

